<resources>
    <string name="app_name">TARP</string>
    <string name="no_text">No Text</string>
    <string name="text_activityTwo">THIS IS ACTIVITY TWO</string>
    <string name="search">Search:</string>
    <string name="search_text">Search:</string>
    <string name="title_activity_main8">Main8Activity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">TalkBack Settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings_speech">SettingsSpeech</string>
    <string name="drug_interaction">Drug Interaction Lookup</string>
    <string name="food_interaction">Food Interaction Lookup</string>
    <string name="listen_to_instructions">Listen to instructions</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="save">save</string>
    <string name="add_new_drug">add new drug</string>
    <string name="date_of_birth_unspecified_yet">Date of birth: unspecified yet</string>
    <string name="set_birth_date">set birth date</string>
    <string name="select_your_gender">Select your gender</string>
    <string name="your_drugs">Your drugs:</string>
    <string name="my_drug_interactions">My drug interactions</string>
    <string name="my_food_interactions">My Food interactions</string>
    <string name="enter_drug_name">Enter drug name:</string>
    <string name="drug_name">drug name</string>
    <string name="find">Find</string>
    <string name="add_to_my_list">Add to my List</string>
    <string name="view_more">view more</string>
    <string name="delete">delete</string>
</resources>
