<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/enter_drug_name"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="#000"
        />

    <EditText
        android:id="@+id/viewForEditingDrug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="28dp"
        android:hint="@string/drug_name" />

    <Button
        android:id="@+id/goToInteractions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewForEditingDrug"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:background="#e55353"
        android:textColor="@color/white"
        android:text="@string/find" />


</RelativeLayout>